# squats_counter_bot

./: .gitignore  bot.py  config.py  pyproject.toml  requirements.txt  services.py
database/: models.py  utils.py
